--- a/youtube.html
+++ b/youtube.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>YOUTUBE</title>
-        <link rel="stylesheet" href="/styles/general.css">
-        <link rel="stylesheet" href="/styles/buttons.css">
-        <link rel="stylesheet" href="/styles/text.css">
-        <link rel="stylesheet" href="/styles/images.css">
-        <link rel="stylesheet" href="/styles/icon.css">
+        <link rel="stylesheet" href="/Styles/general.css">
+        <link rel="stylesheet" href="/Styles/buttons.css">
+        <link rel="stylesheet" href="/Styles/text.css">
+        <link rel="stylesheet" href="/Styles/images.css">
+        <link rel="stylesheet" href="/Styles/icon.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
